Contrast correction

--- a/styles/base.css
+++ b/styles/base.css
@@ -21,7 +21,7 @@ header {
     align-items: center;
     justify-content: center;
     background-color: #07BEB8;
-    color: white;
+    color: black;
     padding: 2.5rem 0;
     gap: 3rem;
 }
